<resources>
    <string name="app_name">pocketLoa</string>
    <string name="title_activity_auction_select">AuctionSelectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="type">부위</string>
    <string name="grade">등급</string>
    <string name="quality">품질</string>
    <string name="stat">스탯</string>
    <string name="engraving">각인</string>
    <string name="engraving1">각인1</string>
    <string name="engraving2">각인2</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="penalty">패널티</string>

    <string name="bracelet_fixed_option">고정 옵션</string>
    <string name="bracelet_grant_option">부여 옵션</string>
</resources>