<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auction.AuctionSelectActivity"
    android:theme="@style/Theme.PocketLoa"
    >

    <include
        android:id="@+id/toolbar_auction_select"
        layout="@layout/toolbar" />



    <!--  부위 등급 품질  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_category_grade_quality"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear_stat"
        app:layout_constraintTop_toBottomOf="@id/toolbar_auction_select"
        app:layout_constraintVertical_weight="1">

        <!--    부위    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="left|center"
                android:hint="@string/type"
                android:inputType="none"
                android:singleLine="true"
                android:textSize="15sp"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  등급  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_grade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_grade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/grade"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--  품질  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_quality"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_quality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/quality"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--  스탯1, 2  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_stat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear_engraving1"
        app:layout_constraintTop_toBottomOf="@id/linear_category_grade_quality"
        app:layout_constraintVertical_weight="1">

        <!--stat1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_stat1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="2"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green"

            >

            <AutoCompleteTextView
                android:id="@+id/actext_stat1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/stat"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- stat1 min -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_stat1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textStyle="bold"


            />

        <!--    stat2    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_stat2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="2"
            android:enabled="false"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green"

            >

            <AutoCompleteTextView
                android:id="@+id/actext_stat2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/stat"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- stat2 min  -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_stat2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--  engraving1 -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_engraving1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear_engraving2"
        app:layout_constraintTop_toBottomOf="@id/linear_stat"
        app:layout_constraintVertical_weight="1">
        <!--stat1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_engraving1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="4"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green"

            >

            <AutoCompleteTextView
                android:id="@+id/actext_engraving1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/engraving1"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- stat1 min -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_engraving1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--  engraving2  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_engraving2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear_penalty"
        app:layout_constraintTop_toBottomOf="@id/linear_engraving1"
        app:layout_constraintVertical_weight="1">
        <!--stat1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_engraving2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="4"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green"

            >

            <AutoCompleteTextView
                android:id="@+id/actext_engraving2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/engraving2"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- stat1 min -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_engraving2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--  penalty  -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_penalty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_option_search"
        app:layout_constraintTop_toBottomOf="@id/linear_engraving2"
        app:layout_constraintVertical_weight="1">
        <!--stat1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_penalty"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="4"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_penalty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/penalty"
                android:inputType="none"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- stat1 min -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_max_penalty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_option_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/pastel_green"
        android:text="검색"
        app:icon="@drawable/auction_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_penalty"
        app:layout_constraintVertical_weight="1" />



</androidx.constraintlayout.widget.ConstraintLayout>