<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PocketLoa">

    <!--  부위 등급 품질  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_type_grade_quality"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        android:paddingVertical="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <!--    부위    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:maxLines="1"
                android:text="@string/type"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  등급  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_grade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_grade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/grade"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--  품질  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_quality"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_quality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/quality"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--  스탯1, 2  -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        android:paddingVertical="1dp"
        app:layout_constraintTop_toBottomOf="@id/linear_type_grade_quality">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_stat1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green">

            <AutoCompleteTextView
                android:id="@+id/actext_stat1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/stat"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_stat1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:hint="min"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

<!--        -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_stat2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/pastel_green"
            android:enabled="false"
            >

            <AutoCompleteTextView
                android:id="@+id/actext_stat2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/stat"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_min_stat2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="min"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:enabled="false"
            android:layout_margin="10dp"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>